# LLM_Excel_Parser

./: .gitignore  README.md  main.py  pyproject.toml  开发文档及思路.md
llm_excel_parser/: __init__.py  config.py  prompts.py
llm_excel_parser/adapters/: __init__.py  openpyxl_adapter.py
llm_excel_parser/core/: datatypes.py  enums.py  exceptions.py  interfaces.py
llm_excel_parser/pipeline/: orchestrator.py  phase1_loader.py  phase2_detector.py  phase3_renderer.py  phase4_header.py  phase5_chunker.py
llm_excel_parser/strategies/: __init__.py  chunking.py  unmerge.py
llm_excel_parser/utils/: __init__.py  concurrency.py  formatters.py  logger_module.py  matrix_algo.py
tests/: conftest.py  test_config_cleanup.py
tests/adapters/: test_openpyxl_adapter.py
tests/pipeline/: test_orchestrator.py  test_phase4_header.py  test_phase5_chunker.py  test_pipeline_phase123_integration.py
tests/strategies/: test_chunking.py  test_unmerge.py
tests/utils/: test_concurrency.py  test_formatters.py  test_matrix_algo.py
