[project]
name = "llm-excel-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.31.0",
    "openpyxl>=3.1.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "xlrd>=2.0.2",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]